--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "1.18.2",
     "debug": "3.1.0",
     "express": "4.16.2",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "vizio-smart-cast": "1.1.6"
   }
 }
